--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,5 +9,11 @@
       sudo apt-get update -y
       sudo apt install -y ansible
       ansible --version
-    displayName: 'Installing Ansible'  
+    displayName: 'Installing Ansible'
+
+  - script: |
+      sudo apt-get update -y
+      sudo apt-get install -y ansible-lint
+      ansible-lint --version
+    displayName: 'Installing Ansible-lint'  
 
