--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,9 @@
       sudo apt-get update -y
       sudo apt-get install -y ansible-lint
       ansible-lint --version
-    displayName: 'Installing Ansible-lint'  
+    displayName: 'Installing Ansible-lint'
+
+  - script: |
+      ansible-lint
+    displayName: 'Run ansible-lint'  
 
