ccommited from machine the anisble-lint path changes

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,15 +17,11 @@
       ansible-lint --version
     displayName: 'Installing Ansible-lint'
 
-  - script: |
-      ansible-lint
-    displayName: 'Run ansible-lint'
-
   - task: Bash@3
     inputs:
       targetType: 'inline'
       script: 'ansible-lint'
-      workingDirectory: '$(Build.SourcesDirectory)/ansible-webserver/playbooks'
+      workingDirectory: '$(Build.SourcesDirectory)/playbooks'
     displayName: 'Executable Ansible-lint'
 
     
