--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,8 @@
       workingDirectory: '$(Build.SourcesDirectory)/playbooks'
     displayName: 'Executable Ansible-lint'
 
+  - script: ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -u ubuntu -i ./host_inventory ./playbooks/apache-install.yml --private-key ‘/home/ubuntu/.ssh/vm-instance-key.pem’
+    displayName: 'Installing Apache'
+
     
 
