--- a/playbooks/apache-install.yml
+++ b/playbooks/apache-install.yml
@@ -29,5 +29,5 @@
   - name: Add content to the index.html
     lineinfile:
       path: /var/www/html/index.html
-      line: Hello Happy Ansible world!
+      line: Hello Happy Automated Ansible world!
     
