--- a/.github/workflows/git-pipeline.yml
+++ b/.github/workflows/git-pipeline.yml
@@ -5,3 +5,31 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@master
+
+  install_ansible:
+    needs: repo_updated
+    runs-on: self-hosted
+    steps:
+    - name: Installing ansible
+      run: |
+        sudo apt-get update -y
+        sudo apt install -y ansible
+        ansible --version
+
+  install_ansible_lint:
+    needs: repo_updated
+    runs-on: slef-hosted
+    steps:
+    - name: Installing ansible-lint
+      run: |
+        sudo apt-get update -y
+        sudo apt-get intsall -y ansible-lint
+        ansible-lint --version
+
+  run_ansible_lint:
+    needs: [install_ansible,install_ansible_lint]
+    runs-on: self_hosted
+    steps:
+    - name: Linting ansible playbooks
+      run: ansible-lint
+    
