Adding intall ansible,install ansibe-lint, run ansible-lint - added work directory ,corrected typo

--- a/.github/workflows/git-pipeline.yml
+++ b/.github/workflows/git-pipeline.yml
@@ -18,7 +18,7 @@ jobs:
 
   install_ansible_lint:
     needs: repo_updated
-    runs-on: slef-hosted
+    runs-on: self-hosted
     steps:
     - name: Installing ansible-lint
       run: |
