Adding intall ansible,install ansibe-lint, run ansible-lint - added work directory ,corrected typo again

--- a/.github/workflows/git-pipeline.yml
+++ b/.github/workflows/git-pipeline.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Installing ansible-lint
       run: |
         sudo apt-get update -y
-        sudo apt-get intsall -y ansible-lint
+        sudo apt-get install -y ansible-lint
         ansible-lint --version
 
   run_ansible_lint:
