--- a/.github/workflows/git-pipeline.yml
+++ b/.github/workflows/git-pipeline.yml
@@ -32,5 +32,5 @@ jobs:
     steps:
     - name: Linting ansible playbooks
       run: ansible-lint
-      working-directory: playboooks
+      working-directory: playbooks
     
