--- a/.github/workflows/git-pipeline.yml
+++ b/.github/workflows/git-pipeline.yml
@@ -33,12 +33,12 @@ jobs:
     - name: Linting ansible playbooks
       run: ansible-lint
       working-directory: playbooks
-
+      
   install_apache:
     needs: run_ansible_lint
     runs_on: self-hosted
     steps:
-    - name: Installing apache'
+    - name: Installing apache
       run: |
         workdir="${GITHUB_WORKSPACE}" 
         ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -u ubuntu -i $workdir/host_inventory $workdir/playbooks/apache-install.yml --private-key '/home/ubuntu/.ssh/vm-instance-key.pem'
